Fix a number of issues with the input prompt (microsoft/vscode-python#4108)
* Fix focus problems

* Switch to a grid layout to get more consistent results

* Add news entries

* Fix hygiene issues

* Fix 4088 - sys info not showing up

--- a/extensions/positron-python/src/datascience-ui/history-react/collapseButton.css
+++ b/extensions/positron-python/src/datascience-ui/history-react/collapseButton.css
@@ -12,7 +12,10 @@
 }
 
 .collapse-input {
-    margin-left:50%;
+    grid-column: 2;
+    padding: 1px;
+    margin-top: 2px;
+    height: min-content;
 }
 
 .remove-style {
